--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript": "~3.8.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
